Cleaning up the code.